service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-svc
  namespace: node
spec:
  selector:
    app: nodeapp
  ports:
  - port: 80
    targetPort: 3000
