ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  namespace: node
spec:
  rules:
  - host: node.awschandra.club
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodeapp-svc
            port: 
              number: 80
